--- a/htmlPhp/webCSS/style.css
+++ b/htmlPhp/webCSS/style.css
@@ -9,6 +9,7 @@ body{
 #systemContactInfo{
     background-color: black;
     color:white;                  /*文字顏色*/
+    text-align: center;
     padding: 30px;                  /*上下邊框距離*/
     line-height: 1.8;               /*行高*/
 }
