typesetting: join, booking, user

--- a/htmlPhp/webCSS/userPageStyle.css
+++ b/htmlPhp/webCSS/userPageStyle.css
@@ -29,3 +29,7 @@ td{
     padding: 30px;                  /*上下邊框距離*/
     line-height: 1.8;               /*行高*/
 }
+
+#createBtn{
+    text-align: center;
+}
