add loginMessage, add loginPageLink to mainNav

--- a/htmlPhp/webCSS/loginPageStyle.css
+++ b/htmlPhp/webCSS/loginPageStyle.css
@@ -19,3 +19,7 @@ body{
 #loginbtn{
     text-align: center;             /*按鈕置中*/
 }
+
+#loginMessage{
+    text-align: center;             /*按鈕置中*/
+}
